--- a/assets/styles.css
+++ b/assets/styles.css
@@ -83,20 +83,29 @@ input{
 
 #liste-brawlers {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes égales */
+  grid-template-columns: repeat(5, 1fr); /* Crée 3 colonnes égales */
   gap: 10px; /* Espace entre les éléments */
   list-style-type: none; /* Retirer les puces des éléments de liste */
   padding: 0;
+  max-height: 375px;
+  scrollbar-width: auto;
+  overflow-y: scroll;
 }
 
-#liste-brawlers li {
+#liste-brawlers a {
   padding: 10px;
   border-radius: 5px; /* Bord arrondi */
   text-align: center; /* Centrer le texte */
   font-size: 16px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Optionnel : ajouter une ombre autour des éléments */
 }
-
+#liste-brawlers a:hover {
+  cursor: pointer;
+}
+#liste-brawlers img {
+width: 100px;
+height: 100px;
+}
 /* Paragraphes "Aucun résultat..." et "Aucune recherche..." */
 p.info-vide {
   font-style: italic;
